refactor(cli): simplify backend preference logic and update tests